clang/test/BSC/Positive/Trait/r3/trait_point_reassign/trait_point_reassign.cbs
// RUN: %clang %s -o %t.output
// RUN: %t.output
// expected-no-diagnostics

trait F {
  int foo(This* this);
};

int int::foo(int *this) {
  return 2;
};

impl trait F for int;

int main() {
  int a = 1;
  trait F* f = &a;
  f = &a;
  int b = f->foo();
  return b - 2;
}