clang/test/BSC/Negative/Trait/r3/trait_pointer_compare_trait_warn/trait_pointer_compare_trait_warn.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s
// RUN: %clang %s -o %t.output
// RUN: %t.output

_Trait F {
    int foo(This* this);
};

_Trait G {
    int goo(This* this);
};

_Trait H {
    double hoo(This* this);
};

int int::foo(int *this) {
    return 2;
};

int int::goo(int *this) {
    return 1;
};

double double::hoo(double *this) {
    return 1.0;
};

_Impl _Trait F for int;
_Impl _Trait G for int;
_Impl _Trait H for double;

int diffTraitCompareOnlyDataEqual() {
    int a = 1;
    int b = 1;
    _Trait F* f = &a;
    _Trait G* g = &b;
    if (f == g) { // expected-warning {{comparison of distinct pointer types ('_Trait F *' and '_Trait G *')}}
        return 1;
    }
    if (f != g) { // expected-warning {{comparison of distinct pointer types ('_Trait F *' and '_Trait G *')}}
        return 0;
    }
    return 1;
}

int diffTraitCompareNotEqual() {
    int a = 1;
    double b = 1.0;
    _Trait F* f = &a;
    _Trait H* h = &b;
    if (f == h) { // expected-warning {{comparison of distinct pointer types ('_Trait F *' and '_Trait H *')}}
        return 1;
    }
    if (f != h) { // expected-warning {{comparison of distinct pointer types ('_Trait F *' and '_Trait H *')}}
        return 0;
    }
    return 1;
}

int diffTraitCompareEqual() {
    _Trait F* f = ((void *)0);
    _Trait H* h = ((void *)0);
    if (f != h) { // expected-warning {{comparison of distinct pointer types ('_Trait F *' and '_Trait H *')}}
        return 1;
    }
    if (f == h) { // expected-warning {{comparison of distinct pointer types ('_Trait F *' and '_Trait H *')}}
        return 0;
    }
    return 1;
}

int main() {
    if (diffTraitCompareOnlyDataEqual()) {
        return 1;
    }
    if (diffTraitCompareNotEqual()) {
        return 1;
    }
    if (diffTraitCompareEqual()) {
        return 1;
    }
    return 0;
}